# aura

./: .gitignore  README.md  gradlew  push.bat  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aura_pipeline.cpp
app/src/main/cpp/include/: aura_pipeline.h
app/src/main/java/com/auracam/app/: AuraApplication.kt
app/src/main/java/com/auracam/app/core/thermal/: ThermalController.kt
app/src/main/java/com/auracam/app/core/util/: ImageUtils.kt
app/src/main/java/com/auracam/app/data/camera/: CameraManager.kt  CameraState.kt  CameraXProvider.kt
app/src/main/java/com/auracam/app/data/repository/: MediaRepositoryImpl.kt
app/src/main/java/com/auracam/app/data/thermal/: ThermalRepositoryImpl.kt
app/src/main/java/com/auracam/app/domain/model/: CameraState.kt
app/src/main/java/com/auracam/app/domain/repository/: CameraRepository.kt  MediaRepository.kt  ThermalRepository.kt
app/src/main/java/com/auracam/app/domain/usecase/: CapturePhotoUseCase.kt  MonitorThermalUseCase.kt  SaveMediaUseCase.kt
app/src/main/java/com/auracam/app/pipeline/: ImageProcessor.kt  NativeBridge.kt
app/src/main/java/com/auracam/app/pipeline/ai/: ModelLoader.kt  PortraitDepthEstimator.kt
app/src/main/java/com/auracam/app/processing/: ImageProcessor.kt  NativeBridge.kt
app/src/main/java/com/auracam/app/ui/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+8 files in other folders)
